fix: page number pagination spacing

--- a/docker/advocase-image/build-files/suitecrm/public/legacy/themes/suite8/css/suitep-base/listview.scss
+++ b/docker/advocase-image/build-files/suitecrm/public/legacy/themes/suite8/css/suitep-base/listview.scss
@@ -102,7 +102,7 @@ tr#pagination {
   font-size: 14px;
   color: $typography-color-secondary;
   padding: 0 8px 0 8px;
-  margin: -9px 0 0 0;
+  margin: -2px 0 0 0;
 }
 
 #listViewStartButton_top {
